# rubberduck-gpt3.vim

./: .gitignore  README.md  client.py  client_test.py  plugin.vim  pyproject.toml
.github/workflows/: ci.yml
tests/: client_test.py  test_rubberduck_gpt3.py
