[tool.poetry]
name = "pair-vim"
version = "0.1.0"
description = ""
authors = ["Georgios Konstantopoulos <me@gakonst.com>"]
readme = "README.md"
packages = [{include = "pair"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
