[tool.poetry]
name = "rubberduck-gpt3.vim"
version = "0.1.0"
description = ""
authors = ["Georgios Konstantopoulos <me@gakonst.com>"]
readme = "README.md"
packages = [{include = "rubberduck_gpt3"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
unittest = "^0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "22.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
